--- a/obs-plugin-management/obs-plugin-management.vcxproj
+++ b/obs-plugin-management/obs-plugin-management.vcxproj
@@ -11,11 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="opm-main.cpp" />
+    <ClCompile Include="moc_OPMMainWindow.cpp" />
+    <ClCompile Include="opm-plugin.cpp" />
+    <ClCompile Include="opm_main_window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="opm-main.h" />
+    <ClInclude Include="opm-plugin.h" />
+    <ClInclude Include="opm_main_window.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ui_plugincenter.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="obs-plugin-management.rc" />
@@ -82,6 +86,9 @@ mkdir "D:\work-for-webrtc\obs-studio\build64\rundir\Debug\data\obs-plugins\obs-p
 xcopy /E /Y "$(ProjectDir)data\" "D:\work-for-webrtc\obs-studio\build64\rundir\Debug\data\obs-plugins\obs-plugin-management\"</Command>
       <Message>Installing obs-plugin-management to OBS rundir</Message>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>D:\work-for-webrtc\obs-build-dependencies\windows-deps-2023-04-12-x64\bin\moc -o "$(ProjectDir)moc_OPMMainWindow.cpp" "$(ProjectDir)opm_main_window.h"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ClCompile>
