--- a/obs-plugin-management/obs-plugin-management.vcxproj.filters
+++ b/obs-plugin-management/obs-plugin-management.vcxproj.filters
@@ -32,6 +32,15 @@
     <ClCompile Include="opm-plugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ItemDelegate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="moc_ItemDelegate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="qrc_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -46,10 +55,21 @@
     <ClInclude Include="opm-plugin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="opm_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemDelegate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="obs-plugin-management.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\image.qrc">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
